<resources>
    <string name="app_name">Digital Space</string>
    <string name="digital">Digital</string>
    <string name="space">Space</string>
    <string name="splashscreen_rocket_icon">SplashScreen rocket Icon</string>
    <string name="entre_com_seu_email_e_senha">Entre com seu email e senha</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="brasil_visto_do_espa_o">Brasil visto do espaço</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="entrar">Entrar</string>
    <string name="ou_inscreva_se_para_participar">Ou inscreva-se para participar</string>
    <string name="das_nossas_atividades">das nossas atividades</string>
    <string name="vamos_nessa">Vamos nessa!</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="toast_campo_vazio">Preencha todos os campos</string>
    <string name="error_vazio">Campo vazio</string>
    <string name="error_confirmacao">Confirmação diferente do Password</string>
    <string name="confirmacao">Conta criada com sucesso</string>
    <string name="sair">Sair</string>
    <string name="explora_o_espacial">EXPLORAÇÃO ESPACIAL</string>
    <string name="conhe_a_nosso_sistema_solar">Conheça o Sistema Solar</string>
    <string name="via_l_ctea">Via Láctea!</string>
    <string name="galaxia_espiral">Um pontinho nessa linda galáxia espiral chamada:</string>
    <string name="nosso_lugar_no_cosmos">Nosso lugar no cosmos</string>
    <string name="iniciar_explora_o">Iniciar exploração</string>
    <string name="sistema_solar">Sistema Solar</string>
    <string name="info_galaxias">As galáxias são categorizadas de acordo com sua morfologia visual como elíptica, espiral ou irregular.\n\Acredita-se que muitas galáxias tenham buracos negros supermassivos em seus centros.</string>
    <string name="informa_es_nt_cnicas">Informações \ntécnicas</string>
    <string name="sol">Sol</string>
    <string name="informacoes_tecnicas">Informações técnicas</string>
    <string name="curiosidades">Curiosidades</string>
    <string name="atualidades">Atualidades</string>
    <string name="info_sistema_solar">O Sistema Solar é formado pelo Sol, sua estrela, e por tudo que orbita ao seu redor atraído por sua gravidade, como os planetas (Mercúrio, Vênus, Terra , Marte, Júpiter, Saturno, Urano e Netuno) e seus satélites, planetas anões como Plutão e milhões de asteróides, cometas e meteróides.</string>
    <string name="meus_favoritos">Meus favoritos</string>
    <string name="bibliografia">Bibliografia</string>
    <string name="alterar_nome">Alterar nome</string>
    <string name="alterar_email">Alterar email</string>
    <string name="alterar_Senha">Alterar senha</string>
    <string name="avatar">Avatar</string>
    <string name="explorador_espacial">Explorador Espacial</string>
    <string name="explorador_espacial_com">Explorador@Espacial.com</string>
    <string name="novo_nome">Novo nome</string>
    <string name="confirmar">confirmar</string>
    <string name="close_dialog_button">Close Dialog Button</string>
    <string name="novo_email">Novo email</string>
    <string name="senha">Senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="senha_antiga">Senha antiga</string>
    <string name="confirmar_nova_senha">Confirmar nova senha</string>
    <string name="favoritos">Favoritos</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="icon_favorite">icon favorite</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="ou">ou</string>
    <string name="fazer_login">Fazer login</string>
    <string name="apod_error">Opss, temos um problema!</string>
    <string name="apod_message">Provavelmente a NASA não liberou as informações do dia de hoje ainda, em breve voltaremos.</string>
    <string name="epic_message">Estamos enfrentando problemas, em breve retornaremos!</string>
    <string name="updateMessage"> Data: </string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="quiz">Quiz</string>
    <string name="jogar">Jogar</string>
    <string name="pr_xima">Próxima</string>
    <string name="teste_seus_conhecimentos">Teste aqui seus conhecimentos sobre o Sistema Solar!</string>
    <string name="milkyway_imgdescription">Foto da Via Láctea</string>
    <string name="solareclipse_imgdescription">Foto de um eclipse solar</string>
    <string name="earth_imgdescription">Foto do planeta Terra</string>
    <string name="parab_ns">Você conhece o espaço como a\npalma da mão!</string>
    <string name="item_removido">Item removido dos favoritos.</string>
    <string name="desfazer">Desfazer</string>
    <string name="botao_de_favoritos">Botao de favoritos</string>
    <string name="todo">TODO</string>
    <string name="quebra_linha">\n\n</string>
    <string name="excluir_favorito">Excluir favorito</string>
    <string name="voce_quer_mesmo_item">Você quer mesmo excluir o item?</string>
    <string name="voce_quer_mesmo_conta">Você quer mesmo excluir a sua conta?</string>
    <string name="sim">Sim</string>
    <string name="Item_removido">Item removido</string>
    <string name="nao">Não</string>
    <string name="configuracoes">Configurações</string>
    <string name="desenvolvedores">Desenvolvedores</string>
    <string name="op_es">Opções</string>
    <string name="traduzir_texto">Traduzir texto</string>
    <string name="stay_a_while_and_listen">Stay a while and listen...</string>
    <string name="alerta_traducao">Alerta de tradução!</string>
    <string name="message_traducao">A tradução é feita de maneira automatizada e por conta de termos técnicos e expresões idiomáticas corre grave risco de falhas de interpretação! Deseja prosseguir? </string>
    <string name="facebook_app_id">3277862102318846</string>
    <string name="fb_login_protocol_scheme">fb3277862102318846</string>
    <string name="lembrar_senha">Lembrar senha</string>
    <string name="iniciar">Iniciar</string>
    <string name="intro_quiz">Aqui iremos testar seus conhecimentos espaciais com 10 perguntas.\n\nExiste um limite de 15 segundos para cada pergunta e você tem apenas três chances de errar. Afinal, o espaço é um ambiente impiedoso e é preciso pensar rápido!</string>
    <string name="sua_pontuacao">Sua pontuação é :</string>
    <string name="responder">Responder</string>
    <string name="explorar">Explorar</string>
    <string name="fato_astron_mico">Fato astronômico</string>
    <string name="terra">Terra</string>
    <string name="perfil">Perfil</string>
    <string name="atualizar_senha">Atualizar senha</string>
    <string name="atualizar_perfil">Atualizar perfil</string>
    <string name="senha_nova">Senha nova</string>
    <string name="alterar_perfil">Alterar perfil</string>
    <string name="Responder">Responder</string>
    <string name="contagem_questoes">%d/%d</string>
    <string name="fim">Fim</string>
    <string name="proxima_questao">Próxima questão</string>
    <string name="tempo_esgotado">Tempo esgotado!</string>
    <string name="perdido_no_espaco">Parece que você está perdido no espaço...</string>
    <string name="sua_pontua_o">Sua pontuação é:</string>
    <string name="jogar_novamente">Jogar novamente</string>
    <string name="voltar_tela_inicial">Voltar à tela inicial</string>
    <string name="email_verificacao">Email de verificação enviado com sucesso</string>
    <string name="autenticacao_falhou">Autenticação falhou!</string>
    <string name="verificar_email">É necessário verificar o email!</string>
    <string name="campos_invalidos">Preencha corretamente.</string>
    <string name="bem_vindo_explorador">Bem vindo explorador!</string>
    <string name="vista_seu_traje">Vista seu traje e prepare-se para a decolagem. Iniciaremos uma missão de exploração pelo espaço.\n\nAcomode-se em seu assento, aperte o cinto e prepare-se para ir, audaciosamente, onde ninguém jamais esteve.\n\nPartimos em 3, 2, 1...</string>
    <string name="vamos_l">Vamos lá!</string>
    <string name="permissao_negada">Permissão negada</string>
    <string name="informacoes_atualizadas">Informações atualizadas com sucesso</string>
    <string name="falha_email">Falha na atualização de email</string>
    <string name="erro_alterar_nome">Não foi possível fazer alteração do nome</string>
    <string name="atualizado_sucesso">Informações atualizadas com sucesso</string>
    <string name="alterar_imagem">Alterar imagem</string>
    <string name="atencao_email_profile">Atenção! Para fazer mudança de email será necessário fazer autenticação novamente.</string>
    <string name="error_nome_igual">O nome é igual ao existente</string>
    <string name="nome_atualizado">Nome atualizado com sucesso</string>
    <string name="problema_email_verificacao">Problema ao enviar email de verificação</string>
    <string name="email_atualizado_verificar">Informações atualizadas com sucesso, verifique seu email, e faça login novamente.</string>
    <string name="campo_invalido">Campo invalido</string>
    <string name="email_confirmado">Email confirmado</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="text_forgot_password">Digite o email abaixo para receber um link de redefinição de senha</string>
    <string name="invalid_format">Formato Inválido!</string>
    <string name="erro_senha_6_algarismos">A senha deve ter mais de 6 algarismos</string>
    <string name="erro_validacao_campo">Problema de validação dos campos</string>
    <string name="erro_image_perfil">Não foi possivel alterar a imagem do perfil</string>
    <string name="erro_obter_imagem">Não foi possivel obter imagem</string>
    <string name="erro_alterar_senha">Não foi possível alterar sua senha</string>
    <string name="erro_autenticacao">Problema de autenticação com sua senha</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="tradu_o">Tradução</string>
    <string name="Erro_validacao_signup">Problema de validação dos dados</string>
    <string name="faca_login_novamente">Por favor faça login novamente</string>
    <string name="conta_excluida">Sua conta foi excluída</string>
    <string name="falha_autenticacao">falha de autenticação</string>
    <string name="explicacaoEPIC">Aqui você encontrará imagens diárias coletadas pelo instrumento
        Earth Polychromatic Imaging Camera (EPIC) do DSCOVR, Deep Space Climate Observatory
        (Observatório Climático do Espaço Profundo). O EPIC fornece imagens completas do globo terrestre
        e captura perspectivas únicas de certos eventos astronômicos, como trânsitos lunares.</string>
    <string name="imagem_atualizada">Imagem atualizada com sucesso</string>
    <string name="confirme_seu_email_e_senha">Confirme seu email e senha</string>
    <string name="minhas_pontuacoes">Minhas pontuações</string>
    <string name="download_result">Download de tradução concluído</string>
    <string name="download_text">Aguarde o download e instalação da tradução</string>
    <string name="message_install">Instalação Concluída.</string>
    <string name="failed_download">Falha no Download ou Instalação</string>
    <string name="fato_astronomico">Fato Astronômico</string>
    <string name="alert_time">Este processo levará um tempo</string>
    <string name="fim_jogo">Fim de jogo</string>
    <string name="muito_bem">Muito bem!</string>
    <string name="pontua_es_do_quiz">Pontuações do Quiz</string>
    <string name="veja_seus_melhores_resultados">Veja seus melhores resultados!</string>

</resources>