<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.view.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/brasil_visto_do_espa_o"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bglogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim10dp"
            app:cardBackgroundColor="@color/colorBlack35pct"
            app:cardCornerRadius="@dimen/dim16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/vamos_nessa"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dim24sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNameSignup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dim10dp"
                    android:layout_marginTop="@dimen/dim20dp"
                    android:hint="@string/nome"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorTransparent"
                    app:boxStrokeColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietNameSignup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmailSignup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dim10dp"
                    android:layout_marginTop="@dimen/dim20dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorTransparent"
                    app:boxStrokeColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEmailSignup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordSignup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dim10dp"
                    android:layout_marginTop="@dimen/dim20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorTransparent"
                    app:boxStrokeColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPasswordSignup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordConfirmationSignup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dim10dp"
                    android:layout_marginTop="@dimen/dim20dp"
                    android:hint="@string/confirmar_password"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorTransparent"
                    app:boxStrokeColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPasswordConfirmationSignup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim20dp"
                    android:layout_marginBottom="@dimen/dim12dp"
                    android:paddingHorizontal="@dimen/dim40dp"
                    android:paddingVertical="@dimen/dim10dp"
                    android:text="@string/cadastrar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dim20sp"
                    app:cornerRadius="@dimen/dim6dp"
                    app:strokeColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ou"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dim24sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbLoginSignup"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim20dp"
                    android:paddingHorizontal="@dimen/dim40dp"
                    android:text="@string/fazer_login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dim20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim9dp"
        android:layout_marginEnd="@dimen/dim9dp"
        android:layout_marginBottom="@dimen/dim9dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
